--- a/package.json
+++ b/package.json
@@ -34,9 +34,19 @@
     "harness": "mocha-bdd",
     "files": "test/**/*.test.js",
     "browsers": [
-      "ie/9..latest",
+      "ie/8..latest",
+      "firefox/15",
+      "firefox/latest",
+      "firefox/nightly",
+      "chrome/15",
       "chrome/latest",
-      "firefox/latest"
+      "chrome/canary",
+      "opera/12..latest",
+      "opera/next",
+      "safari/5.1..latest",
+      "ipad/6.0..latest",
+      "iphone/6.0..latest",
+      "android-browser/4.2..latest"
     ]
   },
   "keywords": [
