--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gulp-load-plugins": "^0.5.1",
     "gulp-rename": "^1.2.0",
     "gulp-header": "^1.0.2",
-    "mocha": "^1.19.0"
+    "mocha": "^1.19.0",
+    "zuul": "^1.6.5"
   },
   "keywords": [
     "test",
