--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   },
   "devDependencies": {
     "browserify": "latest",
-    "mocha-better-spec-reporter": "0.0.2",
-    "gulp-mocha": "^0.4.1",
-    "gulp-uglify": "^0.3.0",
+    "mocha-better-spec-reporter": "1.0.0",
+    "gulp-mocha": "1.1.1",
+    "gulp-uglify": "1.0.1",
     "gulp-util": "^2.2.14",
     "gulp": "^3.6.2",
     "vinyl-source-stream2": "^0.1.1",
     "gulp-load-plugins": "^0.5.1",
     "gulp-rename": "^1.2.0",
     "gulp-header": "^1.0.2",
-    "mocha": "^1.19.0",
-    "zuul": "^1.6.5"
+    "mocha": "latest",
+    "zuul": "latest"
   },
   "keywords": [
     "test",
