Added warning to .eql for non strict checks. Also added ability to disable warnings with env variable SHOULDJS_WARN.

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "assert"
   ],
   "main": "./lib/should.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "should-equal": "0.0.1"
+  }
 }
