--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
-  "version": "4.0.4",
+  "version": "4.1.0",
   "author": "TJ Holowaychuk <tj@vision-media.ca> and contributors",
   "repository": {
     "type": "git",
@@ -10,11 +10,12 @@
   "homepage": "https://github.com/shouldjs/should.js",
   "scripts": {
     "test": "gulp test",
-    "zuul": "zuul -- ./test/**/*.test.js ./test/*.test.js"
+    "zuul": "zuul -- ./test/**/*.test.js ./test/*.test.js",
+    "browser": "gulp script"
   },
   "devDependencies": {
     "browserify": "latest",
-    "mocha-better-spec-reporter": "1.0.0",
+    "mocha-better-spec-reporter": "1.1.0",
     "gulp-mocha": "1.1.1",
     "gulp-uglify": "1.0.1",
     "gulp-util": "^2.2.14",
