--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "homepage": "https://github.com/shouldjs/should.js",
   "scripts": {
     "test": "gulp test",
-    "zuul": "zuul -- ./test/**/*.test.js ./test/*.test.js",
+    "zuul": "zuul -- ./test/**/[!error]*.test.js ./test/*.test.js",
     "browser": "gulp script"
   },
   "devDependencies": {
