--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
-  "version": "4.3.0",
+  "version": "4.3.1",
   "author": "TJ Holowaychuk <tj@vision-media.ca> and contributors",
   "repository": {
     "type": "git",
@@ -15,8 +15,8 @@
   },
   "devDependencies": {
     "browserify": "latest",
-    "mocha-better-spec-reporter": "1.1.1",
-    "gulp-uglify": "1.0.1",
+    "mocha-better-spec-reporter": "latest",
+    "gulp-uglify": "^1.0.1",
     "gulp-util": "^2.2.14",
     "gulp": "^3.8.10",
     "vinyl-source-stream2": "^0.1.1",
