--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
-  "version": "4.3.1",
+  "version": "4.4.0",
   "author": "TJ Holowaychuk <tj@vision-media.ca> and contributors",
   "repository": {
     "type": "git",
@@ -9,8 +9,8 @@
   },
   "homepage": "https://github.com/shouldjs/should.js",
   "scripts": {
-    "test": "mocha -R mocha-better-spec-reporter ./test/**/*.test.js",
-    "zuul": "zuul -- ./test/**/[!error]*.test.js ./test/*.test.js",
+    "test": "mocha -R mocha-better-spec-reporter ./test/**/*.test.js ./test/*.test.js",
+    "zuul": "zuul -- ./test/**/*.test.js ./test/*.test.js",
     "browser": "gulp script"
   },
   "devDependencies": {
@@ -35,7 +35,7 @@
   "main": "./lib/should.js",
   "license": "MIT",
   "dependencies": {
-    "should-equal": "0.1.0",
-    "should-format": "0.0.2"
+    "should-equal": "0.2.2",
+    "should-format": "0.0.4"
   }
 }
