--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   },
   "devDependencies": {
     "browserify": "latest",
+    "eslint": "latest",
     "gulp": "^3.8.10",
     "gulp-header": "^1.2.2",
-    "gulp-load-plugins": "^0.5.1",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
-    "gulp-util": "^2.2.14",
     "mocha": "latest",
     "mocha-better-spec-reporter": "latest",
-    "vinyl-source-stream2": "^0.1.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "zuul": "latest"
   },
   "keywords": [
