--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,18 @@
 {
-  "extends": "eslint:recommended",
+  "extends": "eslint",
   "env": {
     "node": true,
     "browser": true,
     "mocha": true,
     "es6": true
+  },
+  "rules": {
+    "valid-jsdoc": 0,
+    "strict": 0,
+    "quotes": 0,
+    "indent": 0,
+    "yoda": 0,
+    "new-cap": 0,
+    "space-after-keywords": 0
   }
 }
