--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
   "version": "8.2.1",
-  "author": "TJ Holowaychuk <tj@vision-media.ca> and contributors",
+  "author": "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com> and other contributors",
   "repository": {
     "type": "git",
     "url": "https://github.com/shouldjs/should.js.git"
