--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "devDependencies": {
     "bluebird": "^3.0.6",
     "browserify": "latest",
+    "bundle-collapser": "^1.2.1",
     "eslint": "^2.4.0",
     "gulp": "^3.8.10",
-    "gulp-header": "^1.2.2",
+    "gulp-derequire": "^2.1.0",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^1.0.1",
+    "gulp-wrapper": "^1.0.0",
+    "lodash.template": "^4.2.4",
     "mocha": "latest",
     "mocha-better-spec-reporter": "latest",
     "vinyl-buffer": "^1.0.0",
