--- a/package.json
+++ b/package.json
@@ -9,25 +9,22 @@
   },
   "homepage": "https://github.com/shouldjs/should.js",
   "scripts": {
+    "cjs": "rollup --format=cjs --output=cjs/should.js lib/should.js",
+    "es6": "rollup --format=es6 --output=es6/should.js lib/should.js",
+    "build": "npm run cjs && npm run es6",
+    "prepublish": "npm run build && npm run browser",
+    "pretest": "npm run build",
     "test": "mocha -R mocha-better-spec-reporter --check-leaks ./test/*.test.js ./test/**/*.test.js",
     "zuul": "zuul -- ./test/**/*.test.js ./test/*.test.js",
-    "browser": "gulp script"
+    "browser": "rollup -c rollup.config.js  --output ./should.js"
   },
   "devDependencies": {
     "bluebird": "^3.0.6",
-    "browserify": "latest",
-    "bundle-collapser": "^1.2.1",
     "eslint": "^2.4.0",
-    "gulp": "^3.8.10",
-    "gulp-derequire": "^2.1.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-wrapper": "^1.0.0",
-    "lodash.template": "^4.2.4",
     "mocha": "latest",
     "mocha-better-spec-reporter": "latest",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "rollup": "^0.26.3",
+    "rollup-plugin-node-resolve": "^1.5.0",
     "zuul": "latest"
   },
   "keywords": [
@@ -39,10 +36,10 @@
   "main": "./index.js",
   "license": "MIT",
   "dependencies": {
-    "should-equal": "0.8.0",
-    "should-format": "0.3.2",
-    "should-type": "0.2.0"
-  }
+    "should-equal": "^1.0.0",
+    "should-format": "^1.0.0",
+    "should-type": "^1.0.0"
+  },
   "files": [
     "cjs/*",
     "es6/*",
