Update eslint config to use modules

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,9 +5,14 @@ root: true
 extends: eslint:recommended
 
 env:
-  node: true
   mocha: true
   browser: true
+  es6: true
+
+parserOptions:
+  ecmaVersion: 6
+  sourceType: "module"
+
 rules:
   quotes: 0
   indent: 0
