--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,43 +1,2 @@
 
----
-root: true
-
-extends: eslint:recommended
-
-env:
-  mocha: true
-  browser: true
-  es6: true
-
-parserOptions:
-  ecmaVersion: 6
-  sourceType: "module"
-
-rules:
-  quotes: 0
-  indent: 0
-  require-jsdoc: 0
-  eqeqeq: 0
-  no-invalid-this: 0
-  default-case: 0
-  no-nested-ternary: 0
-  no-underscore-dangle: 0
-  func-style: 0
-  new-cap: 0
-  callback-return: 0
-  no-loop-func: 0
-  strict: 0
-  semi: [1, "always"]
-  space-before-function-paren: [1, "never"]
-  space-before-blocks: [1, "always"]
-  keyword-spacing: [1, {"before": true, "after": true, "overrides": {}}]
-  no-sequences: 2
-  dot-notation: 1
-  dot-location: [2, "property"]
-  curly: 2
-  no-case-declarations: 0
-  no-console: 0
-  no-shadow: 1
-
-  global-require: 2
-  no-path-concat: 2
+extends: shouldjs
