--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-config-shouldjs": "^1.0.0",
     "mocha": "latest",
     "mocha-better-spec-reporter": "latest",
-    "rollup": "0.34.4",
+    "rollup": "0.34.7",
     "rollup-plugin-node-resolve": "^2.0.0",
     "zuul": "latest"
   },
@@ -38,8 +38,10 @@
   "license": "MIT",
   "dependencies": {
     "should-equal": "^1.0.0",
-    "should-format": "^2.0.0",
-    "should-type": "^1.1.0"
+    "should-format": "^3.0.1",
+    "should-type": "^1.1.0",
+    "should-type-adaptors": "^1.0.0",
+    "should-util": "^1.0.0"
   },
   "files": [
     "cjs/*",
