--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
-  "version": "11.1.1",
-  "author": "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com> and other contributors",
+  "version": "11.1.2",
+  "author": "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/shouldjs/should.js.git"
