--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "test framework agnostic BDD-style assertions",
   "version": "12.0.0",
   "author": "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com>",
+  "typings": "./should.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/shouldjs/should.js.git"
@@ -27,14 +28,11 @@
     "prettier": "^1.5.3",
     "rollup": "^0.49.1",
     "rollup-plugin-node-resolve": "^3.0.0",
+    "tslint": "^5.7.0",
+    "typescript": "^2.4.2",
     "zuul": "latest"
   },
-  "keywords": [
-    "test",
-    "bdd",
-    "assert",
-    "should"
-  ],
+  "keywords": ["test", "bdd", "assert", "should"],
   "main": "./index.js",
   "license": "MIT",
   "dependencies": {
@@ -44,13 +42,5 @@
     "should-type-adaptors": "^1.0.1",
     "should-util": "^1.0.0"
   },
-  "files": [
-    "cjs/*",
-    "es6/*",
-    "as-function.js",
-    "index.js",
-    "should.js",
-    "LICENSE",
-    "*.md"
-  ]
+  "files": ["cjs/*", "es6/*", "as-function.js", "index.js", "should.js", "LICENSE", "*.md"]
 }
