--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
     "eslint-config-shouldjs": "^1.0.0",
     "mocha": "latest",
     "mocha-better-spec-reporter": "latest",
-    "prettier": "^1.5.3",
+    "prettier": "^1.6.1",
     "rollup": "^0.49.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "tslint": "^5.7.0",
     "typescript": "^2.4.2",
     "zuul": "latest"
   },
-  "keywords": ["test", "bdd", "assert", "should"],
+  "keywords": [
+    "test",
+    "bdd",
+    "assert",
+    "should"
+  ],
   "main": "./index.js",
   "license": "MIT",
   "dependencies": {
@@ -42,5 +47,13 @@
     "should-type-adaptors": "^1.0.1",
     "should-util": "^1.0.0"
   },
-  "files": ["cjs/*", "es6/*", "as-function.js", "index.js", "should.js", "LICENSE", "*.md"]
+  "files": [
+    "cjs/*",
+    "es6/*",
+    "as-function.js",
+    "index.js",
+    "should.js",
+    "LICENSE",
+    "*.md"
+  ]
 }
