--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
-  "version": "13.1.2",
+  "version": "13.1.3",
   "author": "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com>",
   "typings": "./should.d.ts",
   "repository": {
@@ -16,7 +16,8 @@
     "prepare": "npm run build && npm run build:umd && npm run build:cjs:as-function",
     "pretest": "npm run build",
     "build:cjs:as-function": "rollup --input ./lib/should.js --output.format=cjs --output.file ./as-function.js",
-    "test": "mocha -R mocha-better-spec-reporter --require ./cjs/should --color --check-leaks ./test/*.test.js ./test/**/*.test.js",
+    "test":
+      "mocha -R mocha-better-spec-reporter --require ./cjs/should --color --check-leaks ./test/*.test.js ./test/**/*.test.js",
     "zuul": "zuul -- ./test/**/*.test.js ./test/*.test.js",
     "build:umd": "rollup -c rollup.config.js --input ./lib/umd.js --output.format=iife  --output.file ./should.js"
   },
@@ -33,12 +34,7 @@
     "typescript": "^2.5.3",
     "zuul": "latest"
   },
-  "keywords": [
-    "test",
-    "bdd",
-    "assert",
-    "should"
-  ],
+  "keywords": ["test", "bdd", "assert", "should"],
   "main": "./cjs/should.js",
   "module": "./es6/should.js",
   "license": "MIT",
@@ -49,13 +45,5 @@
     "should-type-adaptors": "^1.0.1",
     "should-util": "^1.0.0"
   },
-  "files": [
-    "cjs/*",
-    "es6/*",
-    "as-function.js",
-    "should.js",
-    "LICENSE",
-    "*.md",
-    "should.d.ts"
-  ]
+  "files": ["cjs/*", "es6/*", "as-function.js", "should.js", "LICENSE", "*.md", "should.d.ts"]
 }
