--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
-  "version": "13.1.3",
-  "author": "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com>",
+  "version": "13.2.0",
+  "author":
+    "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com>",
   "typings": "./should.d.ts",
   "repository": {
     "type": "git",
@@ -10,15 +11,21 @@
   },
   "homepage": "https://github.com/shouldjs/should.js",
   "scripts": {
-    "build:cjs": "rollup --output.format=cjs --output.file=cjs/should.js lib/index.js",
-    "build:es6": "rollup --output.format=es --output.file=es6/should.js lib/index.js",
+    "build:cjs":
+      "rollup --output.format=cjs --output.file=cjs/should.js lib/index.js",
+    "build:es6":
+      "rollup --output.format=es --output.file=es6/should.js lib/index.js",
     "build": "npm run build:cjs && npm run build:es6",
-    "prepare": "npm run build && npm run build:umd && npm run build:cjs:as-function",
+    "prepare":
+      "npm run build && npm run build:umd && npm run build:cjs:as-function",
     "pretest": "npm run build",
-    "build:cjs:as-function": "rollup --input ./lib/should.js --output.format=cjs --output.file ./as-function.js",
-    "test": "mocha -R mocha-better-spec-reporter --require ./cjs/should --color --check-leaks ./test/*.test.js ./test/**/*.test.js",
+    "build:cjs:as-function":
+      "rollup --input ./lib/should.js --output.format=cjs --output.file ./as-function.js",
+    "test":
+      "mocha -R mocha-better-spec-reporter --require ./cjs/should --color --check-leaks ./test/*.test.js ./test/**/*.test.js",
     "zuul": "zuul -- ./test/**/*.test.js ./test/*.test.js",
-    "build:umd": "rollup -c rollup.config.js --input ./lib/umd.js --output.format=iife  --output.file ./should.js"
+    "build:umd":
+      "rollup -c rollup.config.js --input ./lib/umd.js --output.format=iife  --output.file ./should.js"
   },
   "devDependencies": {
     "bluebird": "^3.5.1",
@@ -33,12 +40,7 @@
     "typescript": "^2.5.3",
     "zuul": "latest"
   },
-  "keywords": [
-    "test",
-    "bdd",
-    "assert",
-    "should"
-  ],
+  "keywords": ["test", "bdd", "assert", "should"],
   "main": "./cjs/should.js",
   "module": "./es6/should.js",
   "license": "MIT",
