--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "should",
   "description": "test framework agnostic BDD-style assertions",
-  "version": "13.2.0",
-  "author":
-    "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com>",
+  "version": "13.2.1",
+  "author": "TJ Holowaychuk <tj@vision-media.ca>, Denis Bardadym <bardadymchik@gmail.com>",
   "typings": "./should.d.ts",
   "repository": {
     "type": "git",
@@ -11,13 +10,10 @@
   },
   "homepage": "https://github.com/shouldjs/should.js",
   "scripts": {
-    "build:cjs":
-      "rollup --output.format=cjs --output.file=cjs/should.js lib/index.js",
-    "build:es6":
-      "rollup --output.format=es --output.file=es6/should.js lib/index.js",
+    "build:cjs": "rollup --output.format=cjs --output.file=cjs/should.js lib/index.js",
+    "build:es6": "rollup --output.format=es --output.file=es6/should.js lib/index.js",
     "build": "npm run build:cjs && npm run build:es6",
-    "prepare":
-      "npm run build && npm run build:umd && npm run build:cjs:as-function",
+    "prepare": "npm run build && npm run build:umd && npm run build:cjs:as-function",
     "pretest": "npm run build",
     "build:cjs:as-function":
       "rollup --input ./lib/should.js --output.format=cjs --output.file ./as-function.js",
@@ -51,13 +47,5 @@
     "should-type-adaptors": "^1.0.1",
     "should-util": "^1.0.0"
   },
-  "files": [
-    "cjs/*",
-    "es6/*",
-    "as-function.js",
-    "should.js",
-    "LICENSE",
-    "*.md",
-    "should.d.ts"
-  ]
+  "files": ["cjs/*", "es6/*", "as-function.js", "should.js", "LICENSE", "*.md", "should.d.ts"]
 }
